cabal-version:      3.0
name:               ppad-chacha
version:            0.2.0
synopsis:           A pure ChaCha20 stream cipher
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  A pure ChaCha20 stream cipher and block function.

source-repository head
  type:     git
  location: git.ppad.tech/chacha.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Cipher.ChaCha20
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , primitive >= 0.8 && < 0.10

test-suite chacha-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-chacha
    , primitive
    , tasty
    , tasty-hunit

benchmark chacha-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-base16
    , ppad-chacha

